--- a/wiki/Milestones.wiki
+++ b/wiki/Milestones.wiki
@@ -7,11 +7,11 @@ Fertigstellung (und commit) jeweils bis 11 Uhr
 
   * MI 27.05. *STUBS*
   Public API der eigenen Komponente, die sich wie die fertige Komponente von den anderen für die Entwicklung benutzen lässt, aber lediglich hardcoded Testdaten zurückliefert bzw. ihre Funktion nur simuliert.
-  Z.B. ein Dummi-GPS-Reader, der sich auch auf das (global irgendwo dirty abgelegte Ziel) zubewegt oder der WebService, der lediglich im local store seine Daten speichert und liest.
+  Z.B. ein Dummi-GPS-Reader, der sich auch auf das (global irgendwo dirty abgelegte Ziel) zubewegt oder der Web-Service, der lediglich im local store seine Daten speichert und liest.
 
   * SA 01.06. *Komponenten fertig*
     * GPS-Daten werden korrekt ausgelesen und berechnet
-    * WebService liest/speichert Daten übers Netz (wenn's nicht klappt nicht schlimm, weil wir dann ja den STUB für Demonstrationszwecke benutzen können)
+    * Web-Service liest/speichert Daten übers Netz (wenn's nicht klappt nicht schlimm, weil wir dann ja den STUB für Demonstrationszwecke benutzen können)
     * SMD-Anfrage und Bestätigung übers Netz
     * Grafische Richtungs- und Positionsanzeige
 
