--- a/wiki/Anwendungsdesign.wiki
+++ b/wiki/Anwendungsdesign.wiki
@@ -1,2 +1,4 @@
+#summary UML-Entwurf kommt noch
 #labels Phase-Design
+
 UML-Entwurf kommt Montag Abend, dann zu finden unter Downloads bzw. im SVN.
