Edited wiki page through web user interface.

--- a/wiki/Anwendungsdesign.wiki
+++ b/wiki/Anwendungsdesign.wiki
@@ -1,4 +1,4 @@
 #summary UML-Entwurf kommt noch
 #labels Phase-Design
 
-UML-Entwurf kommt Montag Abend, dann zu finden unter Downloads bzw. im SVN.
+Grobentwurf ist jetzt unter Downloads zu finden.
